test/driver/unexpected_extension.dmz
// RUN: (dmz ./source.cpp || true) 2>&1 | filecheck %s
// CHECK: error: unexpected source file extension
